[package]
name = "robo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
druid = { git = "https://github.com/linebender/druid.git", rev = "0ebb799" }
tokio = { version = "1.20", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-tungstenite = { version = "0.17", features = ["tokio-runtime"] }
anyhow = "1.0"
qrcodegen = "1.8"
